# stoa

./: .claudeignore  .coverage  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .lintstagedrc.json  .lsp.json  .mcp.json  .release-please-manifest.json  .smoke-artifact-ci-2579  .sops.yaml  .trivyignore  .yamllint  AGENTS.md  BACKLOG.md  BUG-REPORT-GO-1.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DCO.md  DEPLOYMENT_READY.md  DEVELOPER.md  DEVELOPMENT.md  FIX-PLAN-CI1-PHASE-2D.md  GOVERNANCE.md  LIVRAISON.md  Makefile  NEXT_STEPS.md  PLAN-CAB-485-WEBMETHODS-ERROR-SNAPSHOTS.md  PLAN-ERROR-SNAPSHOTS-PHASE4-UI.md  PLAN-MCP-SUBSCRIPTIONS.md  PLAN-MONITORING-E2E.md  PLAN_DETAILLE.md  README.md  RELEASING.md  ROADMAP.md  SECURITY-AUDIT-REPORT.md  (+20 more)
cli/: CLAUDE.md  README.md  pyproject.toml
cli/src/: __init__.py  auth.py  client.py  config.py  main.py  models.py
cli/tests/: conftest.py  test_auth.py  test_client.py  test_config.py
control-plane-api/: .coverage  .env.example  BUG-REPORT-CP-1.md  BUG-REPORT-CP-2.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FIX-G1-env-example.patch  FIX-PLAN-CP1-P1.md  FIX-PLAN-CP1-P2.md  FIX-PLAN-CP2.md  README.md  REWRITE-BUGS.md  REWRITE-PLAN.md  alembic.ini  deploy.sh  openapi-snapshot.json  pyproject.toml  requirements-dev.txt  requirements.txt
control-plane-api/alembic/: env.py
control-plane-api/benchmarks/: __init__.py  config.py  locustfile.py  report.py
control-plane-api/grafana-dashboard-templates/: tenant-basic.json  tenant-full.json  tenant-standard.json
control-plane-api/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml
control-plane-api/scripts/: __init__.py  backfill_api_catalog_gitops.py  backfill_oauth_subscriptions.py  check_git_config_access.sh  initial_catalog_sync.py  seed_demo_clients.py  seed_demo_prospects.py  seed_demo_tenant.py  seed_trial_tenants.py
control-plane-api/src/: __init__.py  config.py  database.py  events.py  logging_config.py  main.py  tracing_config.py
control-plane-api/tests/: __init__.py  conftest.py  conftest_integration.py  test_access_requests_router.py  test_adapter_metrics.py  test_adapter_registry.py  test_adapter_template.py  test_admin_prospects.py  test_admin_prospects_router.py  test_api_key.py  test_api_key_service.py  test_api_lifecycle_deploy.py  test_api_lifecycle_deploy_router.py  test_api_lifecycle_promotion.py  test_api_lifecycle_promotion_router.py  test_api_lifecycle_publish.py  test_api_lifecycle_publish_db.py  test_api_lifecycle_publish_router.py  test_api_lifecycle_router.py  test_api_lifecycle_service.py  test_apigee_adapter.py  test_apis_openapi.py  test_apis_router.py  test_applications.py  test_applications_router.py  test_argocd_admin.py  test_argocd_service.py  test_argocd_service_coverage.py  test_audit.py  test_audit_pseudo_vault.py  test_audit_router.py  test_audit_service.py  test_audit_trail_consumer.py  test_auth_operator.py  test_aws_apigw_adapter.py  test_azure_apim_adapter.py  test_backend_api.py  test_backend_api_repo.py  test_backend_apis_router.py  test_billing.py  (+425 more)
hegemon-mcp/: Cargo.toml
hegemon-mcp/src/: main.rs
landing-api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
landing-api/alembic/: env.py
landing-api/tests/: __init__.py  conftest.py  test_events.py  test_invites.py  test_metrics.py  test_welcome.py
mcp-gateway/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-gateway/k8s/: deployment.yaml  migration-job.yaml  pdb.yaml
mcp-gateway/migrations/: env.py
mcp-gateway/src/: __init__.py  errors.py  main.py  tracing_config.py
mcp-gateway/tests/: conftest.py  test_adapters_linear.py  test_adapters_notion.py  test_anti_zombie.py  test_argument_policy.py  test_auth.py  test_cache_isolation.py  test_cert_binding.py  test_core_tools.py  test_errors.py  test_health.py  test_k8s.py  test_mcp.py  test_metering.py  test_opa_policy.py  test_openapi_converter.py  test_policy_api.py  test_proxied_tools.py  test_rbac_scopes.py  test_response_capping.py  test_sse_limiter.py  test_tool_registry.py  test_transformer.py
mock-backends/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
mock-backends/contracts/: fraud-detection.uac.yaml  sanctions-screening.uac.yaml  settlement.uac.yaml
mock-backends/src/: __init__.py  config.py  logging_config.py  main.py
mock-backends/tests/: __init__.py  conftest.py  test_fraud.py  test_sanctions.py  test_settlement.py
stoa-bench/: Dockerfile  METHODOLOGY.md  pyproject.toml  runner.py
stoa-bench/config/: bench_config.yaml
stoa-bench/dashboards/: demo-readiness.json  l2-cuj-status.json  l3-stability.json
stoa-bench/scoring/: l1_scorer.py  l2_reporter.py  l3_analyzer.py  push_metrics.py
stoa-bench/tests/: conftest.py  test_scoring.py
stoa-ebpf/: Cargo.toml
stoa-ebpf/stoa-tc-ebpf/: Cargo.toml
stoa-ebpf/stoa-xdp/: Cargo.toml
stoa-ebpf/stoa-xdp-common/: Cargo.toml
stoa-ebpf/stoa-xdp-ebpf/: Cargo.toml
stoa-gateway/: .env.example  BUG-REPORT-GW-1.md  BUG-REPORT-GW-2.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.patch  Dockerfile  FIX-PLAN-CAB-2165.md  FIX-PLAN-GW2.md  PERFORMANCE.md  README.md  REWRITE-BUGS.md  REWRITE-PLAN.md  uac-contract-v1.schema.json
stoa-gateway/benches/: gateway_bench.rs  proxy_bench.rs
stoa-gateway/docs/: CAB-1371-verification.md  mcp-spec-coverage.md
stoa-gateway/k8s/: deployment.yaml  hpa.yaml  pdb.yaml
stoa-gateway/policies/: default.rego
stoa-gateway/probes/: runtime_telemetry_probe.py
stoa-gateway/src/: access_log.rs  config.rs  kernel_metrics.rs  lib.rs  main.rs  main_wiring.rs  memory.rs  metrics.rs  rate_limit.rs  security_headers.rs  state.rs  tcp_filter.rs  trace_context.rs
stoa-gateway/tests/: config_regression_guards.rs
stoa-operator/: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
stoa-operator/k8s/: deployment.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
stoa-operator/src/: config.py  cp_client.py  main.py  metrics.py
stoa-pingora/: Cargo.toml
stoa-policy-engine-rs/: .gitignore  Cargo.toml
(+4717 files in other folders)
