# STOA Control Plane API - Python Project Configuration
# CAB-313: Lint, Test, Security configuration

[project]
name = "stoa-control-plane-api"
version = "1.0.0"
description = "STOA Platform Control Plane API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "CAB Ingénierie", email = "dev@cab-i.com" }
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "bandit>=1.7.7",
    "safety>=2.3.5",
    "pip-audit>=2.6.0",
]

# =============================================================================
# RUFF - Fast Python Linter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
    "S101",   # use of assert (ok in tests)
    "S104",   # possible binding to all interfaces
    "ARG001", # unused function argument (FastAPI dependencies)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]
"alembic/**/*.py" = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

# =============================================================================
# BLACK - Code Formatter
# =============================================================================
[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | alembic/versions
)/
'''

# =============================================================================
# ISORT - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
skip = [".venv", "alembic/versions"]
combine_as_imports = true
force_single_line = false

# =============================================================================
# MYPY - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# PYTEST - Test Framework
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# BANDIT - Security Linter
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert used
severity = "low"
confidence = "low"
