[package]
name = "hegemon-mcp"
version = "0.1.0"
edition = "2021"
authors = ["STOA Platform <contact@gostoa.dev>"]
description = "HEGEMON MCP Server v0 — Read-only tools for worker status, cycle status, and metrics"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
