[workspace]
resolver = "2"
members = ["stoa-xdp", "stoa-xdp-common"]
exclude = ["stoa-xdp-ebpf"]

# eBPF program (stoa-xdp-ebpf) is excluded from the workspace —
# it compiles to bpfel-unknown-none target (Linux only, requires bpf-linker).
# Build: cd stoa-xdp-ebpf && cargo +nightly build --target bpfel-unknown-none -Z build-std=core --release
