# ============================================
# CARGO.TOML - Full Dependencies for Gateway Completion
# Copy these to your existing Cargo.toml [dependencies]
# ============================================

[package]
name = "stoa-gateway"
version = "0.1.0"
edition = "2021"
authors = ["STOA Platform <contact@gostoa.dev>"]
description = "STOA MCP Gateway - Legacy-to-AI Bridge"
license = "AGPL-3.0"

[dependencies]
# === Existing (keep these) ===
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# === NEW - Phase 1: Quality Fixes ===
once_cell = "1"                          # Lazy statics for metrics
parking_lot = "0.12"                    # Non-poisoning RwLock

# === NEW - Phase 2: MCP SSE Transport ===
tokio-stream = "0.1"                    # SSE event streams
futures = "0.3"                          # Stream combinators
uuid = { version = "1", features = ["v4", "serde"] }  # Session IDs

# === NEW - Phase 3: Auth ===
moka = { version = "0.12", features = ["sync", "future"] }  # API key + JWKS cache

# === NEW - Phase 4: Config ===
figment = { version = "0.10", features = ["yaml", "env"] }  # Layered config

# === Phase 5: OpenTelemetry Distributed Tracing (CAB-1088) ===
# TODO: Re-enable once opentelemetry 0.27 API stabilizes
# opentelemetry = { version = "0.27", features = ["trace"] }
# opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
# opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
# tracing-opentelemetry = "0.28"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

