# ============================================
# CARGO.TOML - Full Dependencies for Gateway Completion
# Copy these to your existing Cargo.toml [dependencies]
# ============================================

[package]
name = "stoa-gateway"
version = "0.1.0"
edition = "2021"
authors = ["STOA Platform <contact@gostoa.dev>"]
description = "STOA MCP Gateway - Legacy-to-AI Bridge"
license = "AGPL-3.0"

[dependencies]
# === Existing (keep these) ===
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13", default-features = false }  # no protobuf (RUSTSEC-2024-0437)
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# === NEW - Phase 1: Quality Fixes ===
once_cell = "1"                          # Lazy statics for metrics
parking_lot = "0.12"                    # Non-poisoning RwLock
hostname = "0.4"                         # Get local hostname for auto-registration (ADR-028)

# === NEW - Phase 2: MCP SSE Transport ===
tokio-stream = "0.1"                    # SSE event streams
futures = "0.3"                          # Stream combinators
uuid = { version = "1", features = ["v4", "serde"] }  # Session IDs
urlencoding = "2"                           # URL encoding for query params

# === NEW - Phase 3: Auth ===
moka = { version = "0.12", features = ["sync", "future"] }  # API key + JWKS cache

# === NEW - Phase 4: Config ===
figment = { version = "0.10", features = ["yaml", "env"] }  # Layered config

# === Phase 2 OPA: Embedded Policy Engine (CAB-1094) ===
regorus = "0.2"                              # Pure Rust OPA evaluator (no sidecar)

# === Phase 8: Shadow Mode UAC Generation ===
serde_yaml = "0.9"                           # YAML serialization for UAC contracts

# === Phase 3: Kafka Metering (CAB-1105) ===
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# === Phase 7: K8s CRD + Federation (CAB-1105) ===
kube = { version = "0.97", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }
schemars = { version = "0.8", optional = true }

[features]
default = []
kafka = ["rdkafka"]
otel = []  # OpenTelemetry support (Phase 6)
k8s = ["kube", "k8s-openapi", "schemars"]  # K8s CRD watcher (Phase 7)

# === Phase 5: OpenTelemetry Distributed Tracing (CAB-1088) ===
# TODO: Re-enable once opentelemetry 0.27 API stabilizes
# opentelemetry = { version = "0.27", features = ["trace"] }
# opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
# opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
# tracing-opentelemetry = "0.28"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

