# ============================================
# CARGO.TOML - Full Dependencies for Gateway Completion
# Copy these to your existing Cargo.toml [dependencies]
# ============================================

[package]
name = "stoa-gateway"
version = "0.9.2"
edition = "2021"
authors = ["STOA Platform <contact@gostoa.dev>"]
description = "STOA MCP Gateway - Legacy-to-AI Bridge"
license = "Apache-2.0"

[dependencies]
# === Existing (keep these) ===
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.14", default-features = false }  # no protobuf (RUSTSEC-2024-0437)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }  # RUSTSEC-2023-0071: rsa timing vuln — no upstream fix, low risk (JWT verify only, no RSA decrypt)
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
async-trait = "0.1"

# === NEW - Phase 1: Quality Fixes ===
arc-swap = "1"                            # Lock-free route table hot-swap (CAB-1828)
once_cell = "1"                          # Lazy statics for metrics
parking_lot = "0.12"                    # Non-poisoning RwLock
hostname = "0.4"                         # Get local hostname for auto-registration (ADR-028)

# === NEW - Phase 2: MCP SSE Transport ===
tokio-stream = "0.1"                    # SSE event streams
futures = "0.3"                          # Stream combinators
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }  # CAB-1758: WS proxy backend connections
uuid = { version = "1", features = ["v4", "serde"] }  # Session IDs
rand = "0.10"                                # Thread-local PRNG for traceparent (perf)
socket2 = "0.6"                             # TCP backlog tuning (perf)
urlencoding = "2"                           # URL encoding for query params

# === NEW - Phase 3: Auth ===
moka = { version = "0.12", features = ["sync", "future"] }  # API key + JWKS cache

# === NEW - Phase 4: Config ===
figment = { version = "0.10", features = ["yaml", "env"] }  # Layered config

# === Phase 2: mTLS Certificate Binding (CAB-864) ===
subtle = "2"                                 # Timing-safe comparison for fingerprints
base64 = "0.22"                              # Base64url decode for RFC 8705 thumbprints
ipnet = "2"                                  # CIDR matching for trusted proxies

# === Sender-Constrained Tokens — DPoP (CAB-438, RFC 9449) ===
sha2 = "0.11"                                # SHA-256 for DPoP access token hash (ath claim)
form_urlencoded = "1"                        # Parse application/x-www-form-urlencoded (RFC 7523 client_assertion)

# === SOAP/XML Bridge (CAB-1762) ===
quick-xml = { version = "0.39", features = ["serialize"] }  # SOAP/WSDL XML parsing

# === Memory Budget (CAB-1829) ===
libc = "0.2"

# === Guardrails: PII + Injection Detection (CAB-707) ===
regex = "1"
notify = "8"

# === Phase 2 OPA: Embedded Policy Engine (CAB-1094) ===
regorus = "0.9"                              # Pure Rust OPA evaluator (no sidecar) — RUSTSEC-2025-0141: bincode unmaintained (transitive, no API exposed)

# === Phase 8: Shadow Mode UAC Generation ===
serde_yaml = "0.9"                           # YAML serialization for UAC contracts

# === Phase 3: Kafka Metering (CAB-1105) ===
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }

# === Phase 12: Shadow Capture — Port Mirror (CAB-1380) ===
pnet = { version = "0.35", optional = true }

# === WASM Plugin Runtime (CAB-1644) ===
wasmtime = { version = "43", optional = true }
toml = "1.0"                                         # Plugin manifest parsing

# === Pingora Connection Pool (CAB-1849) ===
pingora-core = { version = "0.8", optional = true }
pingora-http = { version = "0.8", optional = true }
bytes = { version = "1", optional = true }

# === Phase 7: K8s CRD + Federation (CAB-1105) ===
kube = { version = "3.0", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.27", features = ["latest"], optional = true }
schemars = { version = "1", optional = true }

# === Phase 5: OpenTelemetry Distributed Tracing (CAB-1374 / CAB-1831: always-on) ===
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"

[features]
default = []
phases = []                                  # Request lifecycle phases (CAB-1834)
wasm = ["wasmtime"]                          # WASM plugin runtime (CAB-1644)
pingora = ["pingora-core", "pingora-http", "bytes"]  # Pingora connection pool (CAB-1849)
kafka = ["rdkafka"]
k8s = ["kube", "k8s-openapi", "schemars"]  # K8s CRD watcher (Phase 7)
pcap = ["pnet"]                              # Port mirror capture (raw packets)

[dev-dependencies]
criterion = "0.8"
insta = { version = "1", features = ["json", "redactions"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
tempfile = "3"

[[bench]]
name = "gateway_bench"
harness = false

[[bench]]
name = "proxy_bench"
harness = false

