[project]
name = "stoa-operator"
version = "0.1.0"
description = "STOA GitOps Reconciliation Operator — watches GatewayInstance and GatewayBinding CRDs"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "S"]
ignore = ["S101"]  # assert OK in tests

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
