[package]
name = "stoa-pingora"
version = "0.1.0"
edition = "2021"
description = "STOA Pingora Front-Proxy — Built on Cloudflare's Pingora framework"
license = "Apache-2.0"
authors = ["STOA Platform <contact@gostoa.dev>"]

[dependencies]
pingora = { version = "0.8", features = ["proxy"] }
pingora-proxy = "0.8"
pingora-core = "0.8"
pingora-http = "0.8"
pingora-load-balancing = "0.8"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
