[package]
name = "stoa-policy-engine"
version = "0.1.0"
edition = "2021"
authors = ["Christophe ABOULICAM <christophe@hlfh.dev>"]
license = "Apache-2.0"
description = "High-performance policy engine for STOA MCP Gateway"
repository = "https://github.com/stoa-platform/stoa-policy-engine-rs"

[lib]
name = "stoa_policy_engine"
path = "src/lib.rs"

[[bin]]
name = "stoa-policy"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
regex = "1.10"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "evaluation"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
