[package]
name = "stoa-xdp"
version = "0.1.0"
edition = "2021"
description = "STOA eBPF XDP rate limiter — userspace loader + Prometheus metrics"
license = "Apache-2.0"

[dependencies]
aya = "0.13"
aya-log = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
stoa-xdp-common = { path = "../stoa-xdp-common", features = ["user"] }
tokio = { version = "1", features = ["full"] }

# Prometheus metrics endpoint
axum = "0.7"
prometheus = { version = "0.13", default-features = false }
